<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_finance_node_menu_item"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/add_finance_node_label" />
        <item
            android:id="@+id/remove_finance_node_menu_item"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/remove_finance_node_label" />
        <item
            android:id="@+id/add_tag_menu_item"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/manage_tags_label" />
        <item
            android:id="@+id/settings_menu_item"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings_label" />
    </group>

    <item android:title="Coming soon">
        <menu>
            <item
                android:id="@+id/nav_view_reports"
                android:icon="@android:drawable/ic_menu_view"
                android:title="@string/view_reports_label" />
        </menu>
    </item>

</menu>
